--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "description": "This bundle offers functionality for sanitizing filenames, i.e. replacing unwanted characters like whitespaces, non-ascii characters, ... (e.g. while uploading them to the CMS).",
   "license": "LGPL-3.0-or-later",
   "require": {
-    "php": "^7.1",
+    "php": "^7.1|^8.0",
     "contao/core-bundle": "^4.4",
     "heimrichhannot/contao-multi-column-editor-bundle": "^2.0.3"
   },
