--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "php": "^7.4||^8.0",
     "contao/core-bundle": "^4.9",
     "heimrichhannot/contao-multi-column-editor-bundle": "^2.13",
+    "heimrichhannot/contao-utils-bundle": "^2.234.1",
     "symfony/config": "^4.4||^5.0",
     "symfony/console": "^4.4||^5.0",
     "symfony/event-dispatcher": "^4.4||^5.0",
